[package]
name = "voyage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
caracat = { git = "https://github.com/maxmouchet/caracat", branch = "main" }
# caracat = "1.0.0"
ip_network = "0.4.1"
itertools = "0.12.0"
log = "0.4.21"
netdev = "0.30.0"
once_cell = "1.19.0"
pantrace = "0.6.2"
pnet = "0.34.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0.195"
stirling_numbers = "0.1.7"
